// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ContentNav/Item/Active Active 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className="active"
        >
          <div
            className="item-content"
          >
            Task Model 1
            <div
              className="chevron"
            />
          </div>
        </div>
        <ul
          className="sub-list "
        />
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Active Expandable 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className="active"
        >
          <div
            className="item-content"
          >
            Test Name
            <div
              className="chevron"
            >
              <svg
                fill="none"
                height={20}
                onClick={[Function]}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="sub-list "
        >
          <li
            className=""
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Active Expanded 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className="active"
        >
          <div
            className="item-content"
          >
            Test Name
            <div
              className="chevron"
            >
              <svg
                fill="none"
                height={20}
                onClick={[Function]}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="18 15 12 9 6 15"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="sub-list expanded"
        >
          <li
            className=""
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
          <li
            className=""
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Active Expanded with active SubItem 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className="active"
        >
          <div
            className="item-content"
          >
            Task Model 1
            <div
              className="chevron"
            >
              <svg
                fill="none"
                height={20}
                onClick={[Function]}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="18 15 12 9 6 15"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="sub-list expanded"
        >
          <li
            className=""
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
          <li
            className="active"
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Inactive Default 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className=""
        >
          <div
            className="item-content"
          >
            Task Model 1
            <div
              className="chevron"
            />
          </div>
        </div>
        <ul
          className="sub-list "
        />
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Inactive Expandable 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className=""
        >
          <div
            className="item-content"
          >
            Test Name
            <div
              className="chevron"
            >
              <svg
                fill="none"
                height={20}
                onClick={[Function]}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="sub-list "
        >
          <li
            className=""
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Inactive Expanded 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <li
        onClick={[Function]}
        role="menuitem"
      >
        <div
          className=""
        >
          <div
            className="item-content"
          >
            Test Name
            <div
              className="chevron"
            >
              <svg
                fill="none"
                height={20}
                onClick={[Function]}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="18 15 12 9 6 15"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="sub-list expanded"
        >
          <li
            className=""
            onClick={[Function]}
            role="menuitem"
          >
            <p />
            <style
              jsx={true}
            >
              
        * {
          font-family: PT Serif;
        }
        li {
          display: flex;
          align-items: center;
          color: #63666A;
          font-size: 14px;
        }
        p {
          margin: 5px 2em 5px 1em;
        }
        .active {
          color: #006298;
        }
      
            </style>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
        * {
          font-family: PT Serif;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          font-size: 14px;
          text-indent: 0.25em;
          z-index: 0;
          cursor: pointer;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          width: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: -5px 5px;
          text-indent: 0;
          color: #313335;
        }
        .active {
          color: #006298;
        }
      
        </style>
      </li>
    </div>
  </div>
</div>
`;
